//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  email String [unique]
  name String
  phone String [unique]
  profile Profile
  teamProfile TeamProfile
  accounts Account [not null]
  pageComments PageComment [not null]
}

Table Account {
  id String [pk]
  userId String [not null]
  type String [not null]
  provider String [not null]
  providerAccountId String [not null]
  refreshToken String
  accessToken String
  expiresAt DateTime
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  user User [not null]

  indexes {
    (provider, providerAccountId) [unique]
  }
}

Table VerificationRequest {
  id String [pk]
  identifier String [not null]
  token String [not null]
  expiresAt DateTime [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table Profile {
  id String [pk]
  avatar String
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  userId String [unique, not null]
  user User [not null]
}

Table TeamProfile {
  id String [pk]
  label String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  userId String [unique, not null]
  user User [not null]
}

Table PageComment {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  route String [not null]
  content String [not null]
  sectionId String
  user User [not null]
  userId String [not null]
  replies PageComment [not null]
  parent PageComment
  parentId String
}

Ref: Account.userId > User.id [delete: Cascade]

Ref: Profile.userId - User.id [delete: Cascade]

Ref: TeamProfile.userId - User.id [delete: Cascade]

Ref: PageComment.userId > User.id

Ref: PageComment.parentId > PageComment.id